<resources>
    <string name="app_name">Wisdom of Life</string>
    <string name="note_image_description">QuoteImage</string>
    <string name="filter">Filter</string>
    <string name="filters">FILTER</string>
    <string name="add_new_note">Add new quote</string>
    <string name="save_note">Save quote</string>
    <string name="filter_notes">Filter quote</string>
    <string name="image_note">Saved image of quote</string>
    <string name="hint_title">Title</string>
    <string name="finish">Finish</string>
    <string name="hint_image_url">Optional Image URL</string>
    <string name="hint_description">Description</string>
    <string name="popup_title">ERROR SAVING CONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="etv_quote_content_holder">Input Quote Input Quote</string>
    <string name="etv_quote_background_holder">Input background url (even gif!)</string>
    <string name="etv_quote_author_holder">Input Author</string>
    <string name="loading_text">Getting secrets of life</string>
    <string name="font">Font</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
</resources>