<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quoteDetailItemViewState"
            type="com.berker.wisdomoflife.ui.quote.detail.QuoteDetailItemViewState" />

        <variable
            name="quoteDetailState"
            type="com.berker.wisdomoflife.ui.quote.detail.QuoteDetailState" />

        <variable
            name="quoteDetailViewModel"
            type="com.berker.wisdomoflife.ui.quote.detail.QuoteDetailViewModel" />

        <variable
            name="fontClick"
            type="com.berker.wisdomoflife.ui.quote.detail.QuoteDetailEvent.ChangeTextFont" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clQuoteDetailRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="16dp">

        <View
            android:id="@+id/bgHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glOptionsHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbOptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/teal_700"
            app:icon="@drawable/ic_baseline_text_option_48"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbTextFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="@{()->quoteDetailViewModel.onFontChangeClicked()}"
            android:text="@string/font"
            app:layout_constraintEnd_toStartOf="@+id/mbTextSize"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mbOptionText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="@{()->quoteDetailViewModel.onTextSizeChangeClicked()}"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/mbTextFont"
            app:layout_constraintEnd_toStartOf="@+id/mbTextAlignement"
            app:layout_constraintStart_toEndOf="@+id/mbTextFont"
            app:layout_constraintTop_toTopOf="@+id/mbTextFont" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbTextAlignement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="@{()->quoteDetailViewModel.onTextHorizontalAlignmentChangeClicked()}"
            app:icon="@drawable/ic_baseline_format_align_middle"
            app:layout_constraintBottom_toBottomOf="@+id/mbTextSize"
            app:layout_constraintEnd_toStartOf="@+id/mbTextColor"
            app:layout_constraintStart_toEndOf="@+id/mbTextSize"
            app:layout_constraintTop_toTopOf="@+id/mbTextSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="@{()->quoteDetailViewModel.onTextColorChangeClicked()}"
            android:text="@string/color"
            app:layout_constraintBottom_toBottomOf="@+id/mbTextAlignement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mbTextAlignement"
            app:layout_constraintTop_toTopOf="@+id/mbTextAlignement" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbOptionBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="@{()-> quoteDetailViewModel.onBackgroundColorChangeClicked()}"
            app:icon="@drawable/ic_baseline_image_option_48"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbOptionAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="@{()-> quoteDetailViewModel.onWeatherChangeClicked()}"
            app:icon="@drawable/ic_baseline_ac_animation_option_48"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etvBgUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:gravity="center"
            android:hint="@string/etv_quote_background_holder"
            android:inputType="textUri"
            android:maxLines="2"
            android:text="@{quoteDetailItemViewState.imageUrl}"
            android:textColor="@color/white_soft"
            android:textColorHint="@color/white_soft"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@+id/mbTextSize"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvRootCard"
            quoteBackgroundColor="@{quoteDetailItemViewState.getBackgroundColor(context)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/quote_grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@+id/etvBgUrl"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/ivRootImageView"
                imageUrl="@{quoteDetailItemViewState.getImageUrl}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="@{quoteDetailItemViewState.rootImageViewAlpha}"
                android:contentDescription="@string/image"
                android:visibility="@{quoteDetailItemViewState.rootImageViewVisibility}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clItemRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_padding">

                <EditText
                    android:id="@+id/etvContent"
                    style="@style/tvContent"
                    customFont="@{quoteDetailItemViewState.getTextFont(context)}"
                    customTextColor="@{quoteDetailItemViewState.getTextColor(context)}"
                    customTextSize="@{quoteDetailItemViewState.textSize}"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/transparent"
                    android:gravity="center"
                    android:hint="@string/etv_quote_content_holder"
                    android:text="@{quoteDetailItemViewState.contentText}"
                    android:textColorHint="@color/white_soft"
                    app:layout_constraintBottom_toTopOf="@+id/etvAuthor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etvAuthor"
                    customFont="@{quoteDetailItemViewState.getTextFont(context)}"
                    customTextColor="@{quoteDetailItemViewState.getTextColor(context)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:hint="@string/etv_quote_author_holder"
                    android:text="@{quoteDetailItemViewState.authorText}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_soft"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etvContent" />

                <com.github.matteobattilana.weather.WeatherView
                    android:id="@+id/wvRootWeather"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/etvContent"
                    app:layout_constraintTop_toTopOf="@+id/etvContent"
                    tools:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbaSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/save_note"
            android:onClick="@{()-> quoteDetailViewModel.onSaveQuote()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_downloading"
            android:gravity="center"
            android:padding="@dimen/card_padding"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:text="@string/loading_text"
                android:textColor="@color/white_soft"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>