<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapter"
            type="com.berker.wisdomoflife.ui.quote.main.adapter.QuoteListAdapter" />
        <variable
            name="quoteListState"
            type="com.berker.wisdomoflife.ui.quote.main.QuoteListState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoteListRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <include
            android:id="@+id/toolBar"
            layout="@layout/layout_toolbar"
            app:layout_constraintTop_toTopOf="parent">

        </include>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineFilterHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0"
            tools:layout_constraintGuide_percent="0.2" />

        <FrameLayout
            android:id="@+id/glFiltersHolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineFilterHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center"
                android:text="@string/filters"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adapter="@{adapter}"
            android:layoutAnimation="@anim/rv_quote_list"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddNewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:contentDescription="@string/add_new_note"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:visibility="@{quoteListState.loadingViewVisibility}"
            android:layout_height="wrap_content"
            android:background="@drawable/background_downloading"
            android:gravity="center"
            android:padding="@dimen/card_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8dp"
                android:text="@string/loading_text"
                android:textColor="@color/white_soft"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>